--- a/style.css
+++ b/style.css
@@ -212,7 +212,7 @@ body{
 .homeSection .homeBody .homeInfoText{
 	padding: 0px 8%;
 	max-width: 768px;
-	height: 90%;
+	height: 90vh;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
@@ -305,6 +305,7 @@ body{
 
 .aboutSection{
 	width: 100%;
+	height: 100vh;
 	padding: 75px 8% 60px;
 	background-color: var(--bg-clr-one);
 }
