--- a/style.css
+++ b/style.css
@@ -298,7 +298,7 @@ body{
 
 .aboutSection{
 	width: 100%;
-	height: 140vh;
+	height: 150vh;
 	padding: 75px 8% 60px;
 	background-color: var(--bg-clr-one);
 }
@@ -463,7 +463,7 @@ body{
 
 .portfolioSection{
 	width: 100%;
-	height: 140vh;
+	height: 150vh;
 	padding: 75px 8% 60px;
 	background-color: var(--bg-clr-two);
 }
@@ -588,6 +588,29 @@ body{
 .portfolioGallery .card:hover .imgBox img{
 	transform: scale(1.1);
 }
+.overlay{
+	position: absolute;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	opacity: 0;
+	transition: opacity 0.4s ease-in-out;
+	background: #000;
+	cursor: pointer;
+}
+.content{
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%,-50%);
+	color: whitesmoke;
+	font-family: Arial, Helvetica, sans-serif;
+	text-align: center;
+}
+.portfolioGallery ,.card:hover .overlay{
+	opacity:0.8;
+}
 
 .portfolioPopupBox{
 	position: fixed;
@@ -625,183 +648,13 @@ body{
 
 /*  *******   Testimonials Section Styling Starts   *******  */
 
-.reviewSection{
-	width: 100%;
-	padding: 75px 8% 60px;
-	background-color: var(--bg-clr-one);
-}
-.reviewSection .reviewTitle{
-	max-width: 700px;
-	margin: 0px auto 45px;
-	text-align: center;
-}
-.reviewSection .reviewTitle h1{
-	position: relative;
-	display: inline-block;
-	font-size: var(--large-heading);
-	color: var(--primary-heading-clr);
-	text-transform: uppercase;
-	margin-bottom: 25px;
-}
-.reviewSection .reviewTitle h1::before{
-	content: '';
-	position: absolute;
-	width: 100%;
-	height: 1px;
-	top: 120%;
-	left: 0px;
-	background-color: var(--secondary-heading-clr);
-}
-.reviewSection .reviewTitle h1::after{
-	content: '';
-	position: absolute;
-	width: 40%;
-	height: 3px;
-	top: calc(120% - 1px);
-	left: 0px;
-	background-color: var(--primary-clr);
-}
-.reviewSection .reviewContents{
-	position: relative;
-	width: 100%;
-	min-height: 370px;
-}
-.reviewContents .reviewCardsWrapper{
-	position: relative;
-	width: 88%;
-	min-height: inherit;
-	margin: 0px auto;
-	overflow: hidden;
-}
-.reviewCardsWrapper .reviewCard{
-	position: absolute;
-	width: 100%;
-	min-height: inherit;
-	text-align: center;
-	padding: 20px 0px 70px;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	flex-direction: column;
-}
-.reviewCardsWrapper .reviewCard:not(.active){
-	top: 0;
-	left: -100%;
-}
-.reviewCardsWrapper .reviewCard img{
-	width: 120px;
-	height: 120px;
-	border-radius: 50%;
-	object-fit: cover;
-	margin-bottom: 5px;
-	outline: 2px solid var(--primary-clr);
-	outline-offset: 3px;
-}
-.reviewCardsWrapper .reviewCard h3{
-	font-size: 24px;
-	font-weight: 600;
-	font-style: italic;
-	color: var(--primary-heading-clr);
-	padding: 7px;
-}
-.reviewCardsWrapper .reviewCard h4{
-	font-style: italic;
-	color: var(--secondary-heading-clr);
-}
-.reviewCardsWrapper .reviewCard p{
-	position: relative;
-	font-size: var(--text-fontSize);
-	color: var(--text-clr);
-	letter-spacing: 1px;
-	line-height: 1.2;
-	padding: 10px;
-}
-.reviewContents .reviewBtns span.next,
-.reviewContents .reviewBtns span.prev{
-	position: absolute;
-	top: 50%;
-	transform: translateY(-50%);
-	padding: 12px 16px;
-	color: var(--primary-clr);
-	font-weight: bold;
-	font-size: 22px;
-	transition: 0.4s;
-	border-radius: 3px;
-	user-select: none;
-	cursor: pointer;
-}
-.reviewContents .reviewBtns span.next{
-	right: 0;
-}
-.reviewContents .reviewBtns span.prev{
-	left: 0;
-}
-.reviewContents .reviewBtns span.next:hover,
-.reviewContents .reviewBtns span.prev:hover{
-	background-color: #1a1a1a;
-	color: var(--primary-clr);
-}
-.reviewContents .reviewCardsIndicators{
-	position: absolute;
-	bottom: 0;
-	left: 50%;
-	transform: translateX(-50%);
-	padding: 5px;
-	cursor: pointer;
-}
-.reviewContents .reviewCardsIndicators .dot{
-	width: 15px;
-	height: 15px;
-	margin: 0px 3px;
-	border: 2px solid var(--primary-heading-clr);
-	border-radius: 50%;
-	display: inline-block;
-	transition: background-color 0.2s ease;
-}
-.reviewContents .reviewCardsIndicators .active{
-	background-color: var(--primary-clr);
-}
-
-@keyframes next1{
-	from{
-		left: 0%;
-	}
-	to{
-		left: -100%;
-	}
-}
-@keyframes next2{
-	from{
-		left: 100%;
-	}
-	to{
-		left: 0%;
-	}
-}
-@keyframes prev1{
-	from{
-		left: 0%;
-	}
-	to{
-		left: 100%;
-	}
-}
-@keyframes prev2{
-	from{
-		left: -100%
-	}
-	to{
-		left: 0%;
-	}
-}
-
-/*  *******   Testimonials Section Styling Ends   *******  */
 
 /*  *******   Contact Section Styling Starts   *******  */
 
 .contactSection{
 	width: 100%;
-	padding: 75px 8% 60px;
+	height: 140vh;
+	padding: 75px 8% 80px;
 	background-color: var(--bg-clr-two);
 }
 .contactSection .contactContentsRow{
