--- a/style.css
+++ b/style.css
@@ -325,7 +325,8 @@ body{
 }
 .aboutContents .aboutImage img{
 	width: 100%;
-	height: 100%;
+	bottom: 5%:
+	height: 115%;
 	object-fit: cover;
 	display: block;
 	position: relative;
@@ -335,9 +336,9 @@ body{
 	position: absolute;
 	content: '';
 	width: 100%;
-	height: 100%;
+	height: 110%;
 	outline: 3px solid var(--primary-clr);
-	top: 15px;
+	top: 5%;
 	left: 15px;
 	z-index: 1;
 }
