--- a/style.css
+++ b/style.css
@@ -324,9 +324,10 @@ body{
 	height: 380px;
 }
 .aboutContents .aboutImage img{
-	width: 100%;
+	width: 95%;
 	height: 115%;
-	bottom: 5%:
+	left: 5%;
+	bottom:0;
 	object-fit: cover;
 	display: block;
 	position: relative;
@@ -335,8 +336,8 @@ body{
 .aboutContents .aboutImage::after{
 	position: absolute;
 	content: '';
-	width: 100%;
-	height: 110%;
+	width: 98%;
+	height: 115%;
 	outline: 3px solid var(--primary-clr);
 	top: 5%;
 	left: 15px;
