--- a/style.css
+++ b/style.css
@@ -320,29 +320,19 @@ body{
 }
 .aboutContents .aboutImage{
 	position: relative;
-	min-width: 300px;
-	height: 380px;
+	min-width: fit-content;
+	height: fit-content;
 }
 .aboutContents .aboutImage img{
-	width: 95%;
-	height: 125%;
+	width: 70%;
+	height: 100%;
 	left: 5%;
 	bottom:5%;
+	outline: 3px solid blueviolet;
 	object-fit: cover;
 	display: block;
 	position: relative;
 	z-index: 2;
-}
-.aboutContents .aboutImage::after{
-	position: absolute;
-	content: '';
-	width: 98%;
-	height: 115%;
-	bottom:5%;
-	outline: 3px solid var(--primary-clr);
-	top: 5%;
-	left: 15px;
-	z-index: 1;
 }
 .aboutContents .aboutInfo h1{
 	position: relative;
