--- a/style.css
+++ b/style.css
@@ -388,7 +388,7 @@ body{
 	grid-template-columns: 1fr 1fr;
 }
 .aboutPersonalInfo div span{
-	color: #6acb8d);
+	color: #6acb8d;
 	letter-spacing: 1px;
 }
 .aboutContents .aboutInfo button{
