--- a/style.css
+++ b/style.css
@@ -424,7 +424,7 @@ body{
 .aboutSkills .skill .progress_bar{
 	width: 100%;
 	height: 16px;
-	background-color: var(--bg-clr-one);
+	background-color: #545f5b;
 	padding: 4px 6px;
 	border-top: 1px solid #000;
 	border-bottom: 1px solid #222;
